--- a/plasmashell/Brisk Dark/metadata.desktop
+++ b/plasmashell/Brisk Dark/metadata.desktop
@@ -5,7 +5,9 @@ X-KDE-PluginInfo-Category=
 X-KDE-PluginInfo-Depends=
 X-KDE-PluginInfo-Email=
 X-KDE-PluginInfo-EnabledByDefault=true
-X-KDE-PluginInfo-License=CCPL:by-sa
-X-KDE-PluginInfo-Name=skism
-X-KDE-PluginInfo-Version=.0.91
+X-KDE-PluginInfo-License=LGPL
+X-KDE-PluginInfo-Name=default
+X-KDE-PluginInfo-Version=5.64.0
 X-KDE-PluginInfo-Website=
+X-Plasma-API=5.0
+
